--- a/src/app/components/sheet/reusable/player-information/player-information.component.html
+++ b/src/app/components/sheet/reusable/player-information/player-information.component.html
@@ -7,15 +7,15 @@
     <table>
       <tr>
         <td>{{ 'SHEET.PLAYER_INFORMATION.PLAYER' | translate }}</td>
-        <td>{{model.metaData.playerInformation.player}}</td>
+        <td class="player">{{model.metaData.playerInformation.player}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.PLAYER_INFORMATION.CAMPAIGN' | translate }}</td>
-        <td>{{model.metaData.playerInformation.campaign}}</td>
+        <td class="campaign">{{model.metaData.playerInformation.campaign}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</td>
-        <td>{{model.metaData.playerInformation.createdOn}}</td>
+        <td class="createdOn">{{model.metaData.playerInformation.createdOn}}</td>
       </tr>
     </table>
   </div>
