--- a/src/app/components/sheet/reusable/notes/notes.component.html
+++ b/src/app/components/sheet/reusable/notes/notes.component.html
@@ -1,9 +1,8 @@
-<div class="sheetComponent"
-     [ngClass]="{'editable': editMode}">
+<div class="sheetComponent">
   <div class="sheetComponentHeader">
     {{ 'SHEET.NOTES' | translate }}
   </div>
-  <div class="sheetComponentBody" (click)="onRequestUpdate()">
+  <div class="sheetComponentBody">
     <div *ngFor="let note of model.notes;" class="note">
       <div class="noteHeader">{{note.name}}</div>
       <div class="noteBody">{{note.note}}</div>
