Changed the createdOn from the Sheet into a Date

--- a/src/app/components/sheet/reusable/player-information/player-information.component.html
+++ b/src/app/components/sheet/reusable/player-information/player-information.component.html
@@ -15,7 +15,7 @@
       </tr>
       <tr>
         <td>{{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</td>
-        <td class="createdOn">{{model.metaData.playerInformation.createdOn}}</td>
+        <td class="createdOn">{{model.metaData.playerInformation.createdOn | date}}</td>
       </tr>
     </table>
   </div>
