Refactoring away from Model towards Sheet

--- a/src/app/components/generic/avatar/avatar.component.html
+++ b/src/app/components/generic/avatar/avatar.component.html
@@ -1,5 +1,5 @@
-<img *ngIf="model"
-     [src]="model.metaData.identity.portrait"
+<img *ngIf="sheet"
+     [src]="sheet.metaData.identity.portrait"
      [style.width]="width"
      [style.height]="height"
      alt="portrait">
