--- a/src/app/components/sheet/reusable/description/description.component.html
+++ b/src/app/components/sheet/reusable/description/description.component.html
@@ -9,19 +9,19 @@
       <table>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.RACE' | translate }}</td>
-          <td>{{model.metaData.description.race}}</td>
+          <td>{{sheet.metaData.description.race}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.GENDER' | translate }}</td>
-          <td>{{model.metaData.description.gender}}</td>
+          <td>{{sheet.metaData.description.gender}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.AGE' | translate }}</td>
-          <td>{{model.metaData.description.age}}</td>
+          <td>{{sheet.metaData.description.age}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.BIRTHDAY' | translate }}</td>
-          <td>{{model.metaData.description.birthday}}</td>
+          <td>{{sheet.metaData.description.birthday}}</td>
         </tr>
       </table>
     </div>
@@ -29,19 +29,19 @@
       <table>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.WEIGHT' | translate }}</td>
-          <td>{{model.metaData.description.weight | weight}}</td>
+          <td>{{sheet.metaData.description.weight | weight}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.HEIGHT' | translate }}</td>
-          <td>{{model.metaData.description.height}}</td>
+          <td>{{sheet.metaData.description.height}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.SIZE' | translate }}</td>
-          <td>{{model.secondaryCharacteristics.sizeModifier}}</td>
+          <td>{{sheet.secondaryCharacteristics.sizeModifier}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.TL' | translate }}</td>
-          <td>{{model.metaData.description.TL}}</td>
+          <td>{{sheet.metaData.description.TL}}</td>
         </tr>
       </table>
     </div>
@@ -49,19 +49,19 @@
       <table>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.HAIR' | translate }}</td>
-          <td>{{model.metaData.description.hair}}</td>
+          <td>{{sheet.metaData.description.hair}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.EYES' | translate }}</td>
-          <td>{{model.metaData.description.eyes}}</td>
+          <td>{{sheet.metaData.description.eyes}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.SKIN' | translate }}</td>
-          <td>{{model.metaData.description.skin}}</td>
+          <td>{{sheet.metaData.description.skin}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.DESCRIPTION.HAND' | translate }}</td>
-          <td>{{model.metaData.description.hand}}</td>
+          <td>{{sheet.metaData.description.hand}}</td>
         </tr>
       </table>
     </div>
