--- a/src/app/components/sheet/reusable/encumbrance/encumbrance.component.html
+++ b/src/app/components/sheet/reusable/encumbrance/encumbrance.component.html
@@ -15,33 +15,33 @@
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.NONE' | translate }}</td>
-          <td>{{model.secondaryCharacteristics.maxLoad.none | weight}}</td>
-          <td>{{model.secondaryCharacteristics.move.none}}</td>
-          <td>{{model.secondaryCharacteristics.dodge.none}}</td>
+          <td>{{sheet.secondaryCharacteristics.maxLoad.none | weight}}</td>
+          <td>{{sheet.secondaryCharacteristics.move.none}}</td>
+          <td>{{sheet.secondaryCharacteristics.dodge.none}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.LIGHT' | translate }}</td>
-          <td>{{model.secondaryCharacteristics.maxLoad.light | weight}}</td>
-          <td>{{model.secondaryCharacteristics.move.light}}</td>
-          <td>{{model.secondaryCharacteristics.dodge.light}}</td>
+          <td>{{sheet.secondaryCharacteristics.maxLoad.light | weight}}</td>
+          <td>{{sheet.secondaryCharacteristics.move.light}}</td>
+          <td>{{sheet.secondaryCharacteristics.dodge.light}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.MEDIUM' | translate }}</td>
-          <td>{{model.secondaryCharacteristics.maxLoad.medium | weight}}</td>
-          <td>{{model.secondaryCharacteristics.move.medium}}</td>
-          <td>{{model.secondaryCharacteristics.dodge.medium}}</td>
+          <td>{{sheet.secondaryCharacteristics.maxLoad.medium | weight}}</td>
+          <td>{{sheet.secondaryCharacteristics.move.medium}}</td>
+          <td>{{sheet.secondaryCharacteristics.dodge.medium}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.HEAVY' | translate }}</td>
-          <td>{{model.secondaryCharacteristics.maxLoad.heavy | weight}}</td>
-          <td>{{model.secondaryCharacteristics.move.heavy}}</td>
-          <td>{{model.secondaryCharacteristics.dodge.heavy}}</td>
+          <td>{{sheet.secondaryCharacteristics.maxLoad.heavy | weight}}</td>
+          <td>{{sheet.secondaryCharacteristics.move.heavy}}</td>
+          <td>{{sheet.secondaryCharacteristics.dodge.heavy}}</td>
         </tr>
         <tr>
           <td>{{ 'SHEET.ENCUMBRANCE.XHEAVY' | translate }}</td>
-          <td>{{model.secondaryCharacteristics.maxLoad.xHeavy | weight}}</td>
-          <td>{{model.secondaryCharacteristics.move.xHeavy}}</td>
-          <td>{{model.secondaryCharacteristics.dodge.xHeavy}}</td>
+          <td>{{sheet.secondaryCharacteristics.maxLoad.xHeavy | weight}}</td>
+          <td>{{sheet.secondaryCharacteristics.move.xHeavy}}</td>
+          <td>{{sheet.secondaryCharacteristics.dodge.xHeavy}}</td>
         </tr>
       </table>
     </div>
