--- a/src/app/components/sheet/reusable/identity/identity.component.html
+++ b/src/app/components/sheet/reusable/identity/identity.component.html
@@ -7,15 +7,15 @@
     <table>
       <tr>
         <td>{{ 'SHEET.IDENTITY.NAME' | translate }}</td>
-        <td class="name">{{model.metaData.identity.name}}</td>
+        <td class="name">{{sheet.metaData.identity.name}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.IDENTITY.TITLE' | translate }}</td>
-        <td class="title">{{model.metaData.identity.title}}</td>
+        <td class="title">{{sheet.metaData.identity.title}}</td>
       </tr>
       <tr>
         <td>{{ 'SHEET.IDENTITY.RELIGION' | translate }}</td>
-        <td class="religion">{{model.metaData.identity.religion}}</td>
+        <td class="religion">{{sheet.metaData.identity.religion}}</td>
       </tr>
     </table>
   </div>
