--- a/src/app/components/sheet/reusable/notes/notes.component.html
+++ b/src/app/components/sheet/reusable/notes/notes.component.html
@@ -3,7 +3,7 @@
     {{ 'SHEET.NOTES' | translate }}
   </div>
   <div class="sheetComponentBody">
-    <div *ngFor="let note of model.notes;" class="note">
+    <div *ngFor="let note of sheet.notes;" class="note">
       <div class="noteHeader">{{note.name}}</div>
       <div class="noteBody">{{note.note}}</div>
     </div>
