Pdf viewer controls now centered and stick to bottom of page

--- a/src/app/components/book-viewer/book-viewer.component.html
+++ b/src/app/components/book-viewer/book-viewer.component.html
@@ -1,16 +1,20 @@
-<pdf-viewer [src]="pdfSrc"
-            [page]="page"
-            [zoom]="zoom"
-            [original-size]="false"
-            style="display: block;"
-            (after-load-complete)="onPDFLoaded($event)">
-</pdf-viewer>
+<div class="bookViewer">
+  <div>
+    <pdf-viewer [src]="pdfSrc"
+                [page]="page"
+                [zoom]="zoom"
+                [original-size]="false"
+                (after-load-complete)="onPDFLoaded($event)"
+                class="pdfViewer">
+    </pdf-viewer>
+  </div>
 
-<div class="button-row">
-  <button md-raised-button (click)="onFirst()"><md-icon>first_page</md-icon></button>
-  <button md-raised-button (click)="onDecrement()"><md-icon>chevron_left</md-icon></button>
-  <button md-raised-button (click)="onZoomOut()"><md-icon>zoom_out</md-icon></button>
-  <button md-raised-button (click)="onZoomIn()"><md-icon>zoom_in</md-icon></button>
-  <button md-raised-button (click)="onIncrement()"><md-icon>chevron_right</md-icon></button>
-  <button md-raised-button (click)="onLast()"><md-icon>last_page</md-icon></button>
+  <div class="button-row pdfControls">
+    <button md-raised-button (click)="onFirst()"><md-icon>first_page</md-icon></button>
+    <button md-raised-button (click)="onDecrement()"><md-icon>chevron_left</md-icon></button>
+    <button md-raised-button (click)="onZoomOut()"><md-icon>zoom_out</md-icon></button>
+    <button md-raised-button (click)="onZoomIn()"><md-icon>zoom_in</md-icon></button>
+    <button md-raised-button (click)="onIncrement()"><md-icon>chevron_right</md-icon></button>
+    <button md-raised-button (click)="onLast()"><md-icon>last_page</md-icon></button>
+  </div>
 </div>
