Basic template loading from the welcome screen

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -97,7 +97,7 @@
       <div class="noSheet flex-container"
            fxLayout="column"
            fxLayoutAlign="center">
-        <gurpsy-no-sheet-loaded class="flex-item"></gurpsy-no-sheet-loaded>
+        <gurpsy-select-sheet class="flex-item"></gurpsy-select-sheet>
       </div>
     </ng-template>
   </ng-template>
