--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -99,7 +99,10 @@
       <div class="noSheet flex-container"
            fxLayout="column"
            fxLayoutAlign="center">
-        <gurpsy-select-sheet class="flex-item"></gurpsy-select-sheet>
+        <gurpsy-select-sheet
+          class="flex-item"
+          (createTemplate)=onNewSheet()>
+        </gurpsy-select-sheet>
       </div>
     </ng-template>
   </ng-template>
