--- a/src/app/components/select-sheet/select-sheet.component.scss
+++ b/src/app/components/select-sheet/select-sheet.component.scss
@@ -2,6 +2,11 @@
   md-card {
     width: 300px;
 
+    .icon {
+      width: 48px;
+      text-align: center;
+    }
+
     button {
       width: 100%;
       padding-bottom: 8px;
