Improved layout of the root component

--- a/src/app/components/sheet/sheet.component.html
+++ b/src/app/components/sheet/sheet.component.html
@@ -1,2 +1,4 @@
-<gurpsy-sheet-header></gurpsy-sheet-header>
-<gurpsy-sheet-body></gurpsy-sheet-body>
+<md-card>
+  <gurpsy-sheet-header></gurpsy-sheet-header>
+  <gurpsy-sheet-body></gurpsy-sheet-body>
+</md-card>
