removed menu options for sheetcreation when no sheet is loaded

--- a/src/app/gurpsy.component.html
+++ b/src/app/gurpsy.component.html
@@ -44,11 +44,15 @@
         <md-icon>more_vert</md-icon>
       </button>
       <md-menu x-position="before" y-position="below" #settings="mdMenu">
-        <button md-menu-item (click)="onNewSheet()">
+        <button md-menu-item
+                *ngIf="sheet"
+                (click)="onNewSheet()">
           <md-icon>portrait</md-icon>
           <span>{{ 'MENU.NEW' | translate }}</span>
         </button>
-        <button md-menu-item (click)="onOpenSheetDialog()">
+        <button md-menu-item
+                *ngIf="sheet"
+                (click)="onOpenSheetDialog()">
           <md-icon>account_box</md-icon>
           <span>{{ 'MENU.OPEN' | translate }}</span>
         </button>
