SelectSheetComponent now no longer shows an empty mdcard if no sheets are available

--- a/src/app/components/select-sheet/select-sheet.component.html
+++ b/src/app/components/select-sheet/select-sheet.component.html
@@ -36,7 +36,7 @@
     </button>
   </md-card>
 
-  <md-card>
+  <md-card *ngIf="templates.length > 0">
     <button
       md-button
       *ngFor="let template of templates"
