Continued removal of the current reference stuff

--- a/src/app/components/dialog/menu/open-sheet-dialog/open-sheet-dialog.component.html
+++ b/src/app/components/dialog/menu/open-sheet-dialog/open-sheet-dialog.component.html
@@ -1,16 +1,5 @@
-<h1 md-dialog-title
-    class="header flex-container"
-    fxLayout="row"
-    fxLayoutAlign="space-between stretch"
-    fxLayoutWrap="nowrap">
-  <md-icon
-    class="flex-item">
-    account_box
-  </md-icon>
-  <span class="flex-item"
-        fxFlex="100%">
+<h1 md-dialog-title>
     {{'DIALOG.OPEN_SHEET.HEADER'| translate}}
-  </span>
 </h1>
 
 <md-dialog-content>
