--- a/src/app/components/dialog/template-updaters/new-sheet/new-sheet.component.html
+++ b/src/app/components/dialog/template-updaters/new-sheet/new-sheet.component.html
@@ -1,3 +1,7 @@
+<h1 md-dialog-title>
+  {{'DIALOG.NEW_SHEET.HEADER'| translate}}
+</h1>
+
 <md-dialog-content *ngIf="template"
                    class="flex-container"
                    fxLayout="column"
