Added the ellipses to overflowing tablecontent

--- a/src/app/components/sheet/sheet.component.scss
+++ b/src/app/components/sheet/sheet.component.scss
@@ -30,6 +30,7 @@
         }
 
         td:last-child {
+          max-width: 1px;
           width: 100%;
           overflow: hidden;
           white-space: nowrap;
