--- a/src/gurpsy-palette.scss
+++ b/src/gurpsy-palette.scss
@@ -69,7 +69,6 @@ $gurpsy-light-blue: (
   )
 );
 
-
 $gurpsy-yellow: (
   0: #FFFFFF,
   50: #FBF7E9,
@@ -103,7 +102,6 @@ $gurpsy-yellow: (
     A700: $black-87-opacity,
   )
 );
-
 
 $gurpsy-green: (
   0: #FFFFFF,
@@ -172,67 +170,81 @@ $gurpsy-red: (
   )
 );
 
-$gurpsy-day-theme-foreground: (
-  base:               black,
-  divider:            rgba(black, 0.12),
-  dividers:           rgba(black, 0.12),
-  disabled:           rgba(black, 0.38),
-  disabled-button:    rgba(black, 0.38),
-  disabled-text:      rgba(black, 0.38),
-  hint-text:          rgba(black, 0.38),
-  secondary-text:     rgba(black, 0.54),
-  icon:               rgba(black, 0.54),
-  icons:              rgba(black, 0.54),
-  text:               rgba(black, 0.87),
-  slider-off:         rgba(black, 0.26),
-  slider-off-active:  rgba(black, 0.38),
-);
-
 $gurpsy-day-theme-background: (
-  status-bar:               black,
-  app-bar:                  map_get($gurpsy-green, 300),
-  background:               map_get($gurpsy-green, 0),
-  hover:                    map_get($gurpsy-green, 50),
-  card:                     white,
-  dialog:                   white,
-  disabled-button:          rgba(black, 0.12),
-  raised-button:            map_get($gurpsy-green, 100),
-  focused-button:           rgba(black, 0.12),
-  selected-button:          map_get($mat-grey, 300),
-  selected-disabled-button: map_get($mat-grey, 400),
-  disabled-button-toggle:   map_get($mat-grey, 200)
-);
-
-$gurpsy-night-theme-foreground: (
-  base:               white,
-  divider:            rgba(white, 0.12),
-  dividers:           rgba(white, 0.12),
-  disabled:           rgba(white, 0.3),
-  disabled-button:    rgba(white, 0.3),
-  disabled-text:      rgba(white, 0.3),
-  hint-text:          map_get($gurpsy-dark-blue, 400),
-  secondary-text:     map_get($gurpsy-yellow, 400),
-  icon:               white,
-  icons:              white,
-  text:               white,
-  slider-off:         rgba(white, 0.3),
-  slider-off-active:  rgba(white, 0.3),
+  status-bar: black,
+  app-bar:    map_get($gurpsy-green, 300),
+  background: map_get($gurpsy-green, 0),
+  hover:      map_get($gurpsy-green, 50),
+  card:       white,
+  dialog:     white,
+  disabled-button: rgba(black, 0.12),
+  raised-button: map_get($gurpsy-green, 100),
+  focused-button: rgba(black, 0.12),
+  selected-button: map_get($mat-grey, 300),
+  selected-disabled-button: map_get($mat-grey, 800),
+  disabled-button-toggle: black,
+  unselected-chip: map_get($mat-grey, 700),
+  disabled-list-option: black,
 );
 
 $gurpsy-night-theme-background: (
-  status-bar:               map_get($gurpsy-dark-blue, 900),
-  app-bar:                  map_get($gurpsy-dark-blue, 500),
-  background:               map-get($gurpsy-dark-blue, 800),
-  hover:                    rgba(white, 0.04),
-  card:                     map_get($gurpsy-dark-blue, 500),
-  dialog:                   map_get($gurpsy-dark-blue, 700),
-  disabled-button:          map_get($gurpsy-dark-blue, 300),
-  raised-button:            map-get($gurpsy-dark-blue, 500),
-  focused-button:           rgba(white, 0.12),
-  selected-button:          map_get($gurpsy-light-blue, 900),
+  status-bar: map_get($gurpsy-dark-blue, 900),
+  app-bar:    map_get($gurpsy-dark-blue, 500),
+  background: map-get($gurpsy-dark-blue, 800),
+  hover:      rgba(white, 0.04),
+  card:       map_get($gurpsy-dark-blue, 500),
+  dialog:     map_get($gurpsy-dark-blue, 700),
+  disabled-button: map_get($gurpsy-dark-blue, 300),
+  raised-button: map-get($gurpsy-dark-blue, 500),
+  focused-button: rgba(white, 0.12),
+  selected-button: map_get($gurpsy-light-blue, 900),
   selected-disabled-button: map_get($gurpsy-dark-blue, 300),
-  disabled-button-toggle:   map_get($mat-grey, 1000)
+  disabled-button-toggle: black,
+  unselected-chip: map_get($gurpsy-dark-blue, 900),
+  disabled-list-option: black,
 );
+
+$gurpsy-day-theme-foreground: (
+  base:              black,
+  divider:           rgba(black, 0.12),
+  dividers:          rgba(black, 0.12),
+  disabled:          rgba(black, 0.38),
+  disabled-button:   rgba(black, 0.38),
+  disabled-text:     rgba(black, 0.38),
+  hint-text:         rgba(black, 0.38),
+  secondary-text:    rgba(black, 0.54),
+  icon:              rgba(black, 0.54),
+  icons:             rgba(black, 0.54),
+  text:              rgba(black, 0.87),
+  slider-min:        rgba(black, 0.87),
+  slider-off:        rgba(black, 0.26),
+  slider-off-active: rgba(black, 0.38),
+);
+
+
+$gurpsy-night-theme-foreground: (
+  base:              white,
+  divider:           $white-12-opacity,
+  dividers:          $white-12-opacity,
+  disabled:          rgba(white, 0.3),
+  disabled-button:   rgba(white, 0.3),
+  disabled-text:     rgba(white, 0.3),
+  hint-text:         map_get($gurpsy-dark-blue, 400),
+  secondary-text:    map_get($gurpsy-yellow, 400),
+  icon:              white,
+  icons:             white,
+  text:              white,
+  slider-min:        white,
+  slider-off:        rgba(white, 0.3),
+  slider-off-active: rgba(white, 0.3),
+);
+
+
+
+
+
+
+
 
 
 
